Updates devrunner image with more configurations

--- a/devtools/Dockerfile.devrunner
+++ b/devtools/Dockerfile.devrunner
@@ -1,3 +1,11 @@
 FROM ruby:2.4.2-jessie
 
+#Dependencies
 RUN gem install jekyll
+
+#Configuration
+RUN useradd -m -G sudo developer \
+&&  mkdir -p /website \
+&&  chown -R developer /website/ /usr/local/
+
+USER developer
