Configura el artefacto para usar apache server

--- a/ops/Dockerfile.website
+++ b/ops/Dockerfile.website
@@ -1,4 +1,6 @@
-FROM nginx:1.13.6-alpine
+FROM httpd:2.2-alpine
 
+# Configuration
+COPY httpd.conf /usr/local/apache2/conf/
 # Website content
-COPY _site /usr/share/nginx/html
+COPY _site/ /usr/local/apache2/htdocs/
