--- a/infra/Makefile
+++ b/infra/Makefile
@@ -1,6 +1,6 @@
 arrange_test_docker_website:
 	rm -rf $(shell pwd)/infra/_site
-	cp -R $(shell pwd)/website/_site $(shell pwd)/infra/_site
+	cp -R $(shell pwd)/website/_site $(shell pwd)/infra/_site 2>/dev/null
 
 test_and_build_docker_website: arrange_test_docker_website
 	docker run \
