Enables html proofing tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,6 @@ before_script:
 
 script:
   - make test_website_script userid=0
+  - make test_website_htmlproofer
   - make test_and_build_docker_website
   - make upload_docker_website env=qa
