Fix upload docker images tasks

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,6 @@ script:
   - make test_website_script userid=0
   - make test_website_htmlproofer
   - make test_and_build_docker_website
-  - make upload_docker_website env=qa
+  - make upload_docker_website_qa
   - make upload_docker_website_prod BUILD_DEBUG=no
 
