--- a/website/_config.yml
+++ b/website/_config.yml
@@ -26,6 +26,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 facebook_username: eccejuquito2018
 instagram_username: eccejuquito
+inscripciones_url: https://ecceju-inscripcion-qa.herokuapp.com/inscripciones
 
 # Build settings
 markdown: kramdown
