--- a/infra/Makefile
+++ b/infra/Makefile
@@ -18,6 +18,7 @@ define upload_website_forward_env
 	docker tag ecceju/website:test registry.heroku.com/$(1)/web
 	@docker login --username=_ --password=$(2) registry.heroku.com
 	docker push registry.heroku.com/$(1)/web
+	heroku container:release web --app $(1)
 endef
 
 upload_docker_website_qa:
