Adds heroku cli installation

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ services:
 install: make
 
 before_script:
+  - curl https://cli-assets.heroku.com/install-ubuntu.sh | sh
   - make install_dependencies userid=0
 
 script:
